# cue

./: .coverage  .coveragerc  .cueignore  .env.example  .ggignore  .gitguardian.yml  .gitignore  CLAUDE_STRUCTURE_README.md  PYRIGHT_BASELINE_ANALYSIS.md  PYRIGHT_DEVELOPER_GUIDE.md  README.md  claude-generic-instructions.md  claude-project-specific.md  claude.md  pyproject.toml  pyright_errors.txt  pyrightconfig.json  pytest.ini
.claude/: settings.json
.github/: CodeReviewerProjectMemory.md  Memory.md  WorkflowMasterState.md
blarify/: logger.py  main.py  project_graph_creator.py  project_graph_diff_creator.py  project_graph_updater.py
cue/: LANGUAGE_SUPPORT.md  format_verifier.py  main.py  project_graph_creator.py  project_graph_diff_creator.py  project_graph_updater.py
docs/: AGENT_MANAGER_USAGE.md  quickstart.md
mcp-blarify-server/: .env.example  README.md  __init__.py  docker-compose.yml  manual_test.py  run_integration_tests.sh
mcp-cue-server/: README.md  __init__.py  manual_test.py  requirements.txt  run_integration_tests.sh
neo4j-container-manager/: .gitignore  README.md  jest.config.js
prompts/: BlarPlusGitignore.md  CodeReviewResponseAgent.md  CodeReviewSubAgent.md  DocumentationNodes.md  FilesystemNodes.md  LLMSummaries.md  MCP.md  Neo4jContainerManagement.md  PromptWriter.md  VSCodeVisualization.md  agent-manager-implementation.md  example-performance-optimization.md  fix-blarify-tree-sitter-ruby-error.md  fix-environment-setup-coordination.md  fix-vscode-blarify-integration-command-mismatch.md  fix-vscode-extension-setup-issue-49.md  fix-workflow-execution-pattern.md  implement-precommit-workflow.md  implement-pyright-type-checking.md  improve-test-coverage.md  investigate-code-review-invocation-failure.md  migrate-to-gadugi-repository.md  separate-project-specific-instructions.md  update-readme-code-understanding-engine.md  update-readme-comprehensive.md
scripts/: check_ci_status.sh
tests/: .coverage  conftest.py  test_agent_manager.py  test_agent_manager_integration.py  test_agent_manager_structure.py  test_code_complexity.py  test_conditional_imports_integration.py  test_description_generator.py  test_documentation_extraction.py  test_documentation_nodes.py  test_filesystem_feature_missing.py  test_filesystem_nodes.py  test_filesystem_nodes_simple.py  test_filesystem_operations.py  test_gitignore_integration.py  test_graph_basic.py  test_graph_comprehensive.py  test_graph_fixed.py  test_graph_operations.py  test_graph_simple.py  test_integration_llm.py  test_llm_description_nodes.py  test_llm_integration.py  test_llm_service.py  test_lsp_helper.py  test_project_file_explorer.py  test_readme_accuracy.py  test_tree_sitter_helper.py
vscode-blarify-visualizer/: .eslintrc.json  .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  EXTENSION-TROUBLESHOOTING.md  PRECOMMIT-WORKFLOW.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  cleanup-neo4j.sh  debug-extension.js  example-settings.json  package-lock.json  package.json  test-blarify-extension-style.js  test-blarify-no-llm.js  test-bundled.js  test-extension.js  test-ingestion.js  test-neo4j-fix.sh  test-neo4j-singleton.sh  test-password-save.js  test-real-ingestion.js  update-settings.js
vscode-cue-visualizer/: .gitignore  .pre-commit-config.yaml  .vscodeignore  EXTENSION-TROUBLESHOOTING.md  LICENSE  PRECOMMIT-WORKFLOW.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  (+11 more)
vscode-cue-visualizer/bundled/: README.md  pyproject.toml  requirements.txt  setup.py
vscode-cue-visualizer/bundled/blarify/: LANGUAGE_SUPPORT.md  main.py  project_graph_diff_creator.py
vscode-cue-visualizer/bundled/blarify/db_managers/: neo4j_manager.py
vscode-cue-visualizer/bundled/blarify/examples/: graph_builder.py
vscode-cue-visualizer/bundled/blarify/graph/: graph.py
vscode-cue-visualizer/bundled/blarify/graph/node/: __init__.py  class_node.py  documentation_file_node.py  function_node.py
vscode-cue-visualizer/bundled/blarify/graph/node/types/: definition_node.py
vscode-cue-visualizer/bundled/blarify/internal/: create.py  update.py
vscode-cue-visualizer/bundled/blarify/prebuilt/: graph_builder.py
vscode-cue-visualizer/bundled/blarify/project_file_explorer/: __init__.py  project_files_iterator.py
vscode-cue-visualizer/bundled/blarify/tests/: __init__.py
vscode-cue-visualizer/bundled/blarify/tests/db_managers/: __init__.py  test_neo4j_authentication.py
vscode-cue-visualizer/bundled/neo4j-container-manager/: container-manager.d.ts  container-manager.d.ts.map  container-manager.js  container-manager.js.map  data-manager.d.ts  data-manager.d.ts.map  data-manager.js  data-manager.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  logger.d.ts  logger.d.ts.map  logger.js  logger.js.map  port-manager.d.ts  port-manager.d.ts.map  port-manager.js  port-manager.js.map  types.d.ts  types.d.ts.map  volume-manager.d.ts  volume-manager.d.ts.map  volume-manager.js  volume-manager.js.map
(+266 files in other folders)
