[tool.poetry]
name = "blarify"
version = "1.2.0"
description = "A simple graph builder based on LSP calls"
authors = ["Juan Vargas <juan@blar.io>", "Benjamín Errazuriz <benjamin@blar.io>"]
readme = "README.md"
homepage = "https://blar.io"
repository = "https://github.com/blarApp/blarify"
license = "MIT"
packages = [{include = "blarify"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.14"
asyncio = "^3.4.3"
websockets = "^13.1"
neo4j = "^5.25.0"
python-dotenv = "^1.0.1"
tree-sitter = "^0.23.2"
tree-sitter-python = "^0.23.2"
tree-sitter-ruby = "^0.23.0"
tree-sitter-javascript = "^0.23.0"
tree-sitter-typescript = "^0.23.2"
tree-sitter-c-sharp = "^0.23.1"
tree-sitter-go = "^0.23.4"
falkordb = "^1.0.10"
requests = "^2.32.3"
typing-extensions = "^4.12.2"
jedi-language-server = "^0.43.1"
psutil = "^7.0.0"
vendoring = "^1.2.0"
tree-sitter-php = "^0.23.11"
tree-sitter-java = "^0.23.5"
openai = "^1.35.0"
pathspec = "^0.12.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"
pyright = "^1.1.350"
mypy = "^1.8.0"

[tool.vendoring]
destination = "blarify/vendor"
namespace = "blarify.vendor"
requirements = "requirements-vendor.txt"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["blarify", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "**/vendor", "blarify/vendor"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
